--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fontsource/fira-code": "^4.5.2",
     "@fontsource/inter": "^4.5.1",
     "contentlayer": "^0.0.33",
     "framer-motion": "^5.5.6",
